# FFmpegDemo

./: CMakeLists.txt  README.md
AVPlayer/: AVPlayer.cpp  AVPlayer.h  readme.txt
AVStudio/: CMakeLists.txt
AVStudio/Include/: AVStudio.h  FFmpeg.h
AVStudio/Include/Apis/: AudioFifo.h  CodecContext.h  Device.h  FilterGraph.h  FormatContext.h  Frame.h  Packet.h  Resample.h  Sdl.h  SwsScale.h
AVStudio/Include/Core/: DataItem.h  Editor.h  Factory.h  LatheParts.h  Setting.h  WorkShop.h
AVStudio/Include/Filter/: AudioMixFilter.h  CombineFilter.h  Filter.h
AVStudio/Include/IO/: IOHandle.h  IOPcm.h  IOPlayer.h  IOSync.h  IOSyncAV.h
AVStudio/Include/SDL/: Sdl.h  SdlHandle.h  SdlPlayer.h
AVStudio/Include/Util/: Callback.h  Common.h  DataItem.h  Debug.h  MediaMask.h  Queue.h  Setting.h  Thread.h
AVStudio/Source/: AVStudio.cpp
AVStudio/Source/Apis/: AudioFifo.cpp  CodecContext.cpp  Device.cpp  FilterGraph.cpp  FormatContext.cpp  Frame.cpp  Packet.cpp  Resample.cpp  Sdl.cpp  SwsScale.cpp
AVStudio/Source/Core/: DataItem.cpp  Editor.cpp  Factory.cpp  LatheParts.cpp  Setting.cpp  WorkShop.cpp
AVStudio/Source/Filter/: AudioMixFilter.cpp  CombineFilter.cpp  Filter.cpp
AVStudio/Source/IO/: IOHandle.cpp  IOPcm.cpp  IOPlayer.cpp  IOSync.cpp  IOSyncAV.cpp
AVStudio/Source/SDL/: Sdl.cpp  SdlHandle.cpp  SdlPlayer.cpp
AVStudio/Source/Util/: Common.cpp  DataItem.cpp  Debug.cpp  MediaMask.cpp  Setting.cpp  Thread.cpp
FFmpegDemo/: CMakeLists.txt  FFmpegDemo.cpp  FFmpegDemo.h
